--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,8 +43,13 @@
 
 .cdk-drag-placeholder {
   opacity: 0;
+  background: rgba(0, 0, 0, .2);
 }
 
 .cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  transition: transform 550ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cdk-drop-dragging .cdk-drag {
+  transition: transform 500ms cubic-bezier(0, 0, 0.2, 1);
 }
